...
            .semantics { role = Role.Button }
            .align(Alignment.TopEnd),
        contentAlignment = Alignment.Center
    ) {
        Icon(
            imageVector = Icons.AutoMirrored.Rounded.Logout,
            contentDescription = "Logout",
            tint = MaterialTheme.colorScheme.onSurface
        )
    }

    Box(
        modifier = Modifier
...
