<?xml version="1.0" encoding="utf-8"?>
<resources>
    // GENERAL
    <string name="welcome_title">Bienvenue !</string>
    <string name="welcome_subtitle">Créez votre compte HobbyMatchMaker</string>
    <string name="welcome_back_title">Heureux de vous revoir !</string>
    <string name="welcome_back_subtitle">Connectez-vous à HobbyMatchMaker</string>
    <string name="default_web_client_id" translatable="false">402985273077-ijpv11p99mv6vgii80etm1ee9j1ll9ui.apps.googleusercontent.com</string>

    // ACCESSIBILITY
    <string name="facebook_alt">Logo Facebook</string>
    <string name="google_alt">Logo Google</string>
    <string name="apple_alt">Logo Apple</string>

    // FORM
    <string name="firstname">Pr\u00E9nom</string>
    <string name="lastname">Nom de famille</string>
    <string name="example">Exemple:&#160;</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="at_least">Attendu:&#160;</string>
    <string name="password_hint">8 caractères • 1 chiffre • 1 majuscule \n• 1 minuscule • 1 caractère spécial</string>
    <string name="sign_up">S'inscrire</string>
    <string name="already_a_member">Déjà membre ?</string>
    <string name="already_a_member_connect">Connectez-vous</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="log_in">Se connecter</string>
    <string name="new_member">Pas encore membre ?</string>
    <string name="new_member_clickable_part">Inscrivez-vous</string>
    <string name="forgot_password_title">Merci d'entrer votre e-mail. Nous allons vous envoyer un e-mail avec les instructions à suivre.</string>
    <string name="your_email">Votre e-mail</string>
    <string name="reset_password">R\u00E9initialiser</string>
    <string name="cancel">Annuler</string>
    <string name="sign_out">Déconnexion</string>
    <string name="email_sent">Merci de v\u00E9rifier votre boite de r\u00E9ception</string>
    <string name="continue_with_rs">Ou se connecter avec</string>
    <string name="show_password">Montrer le mot de passe</string>
    <string name="hide_password">Cacher le mot de passe</string>
    <string name="sign_in_with_facebook">Se connecter avec Facebook</string>
    <string name="sign_in_with_google">Se connecter avec Google</string>
    <string name="sign_in_with_apple">Se connecter avec Apple</string>

    // ERROR
    <string name="login_error">Identifiant ou mot de passe incorrect</string>
    <string name="signup_error">Cet email est déjà associé à un compte existant</string>
    <string name="email_already_exists_error">Cet e-mail est déjà associé à un compte existant</string>
    <string name="user_disabled_error">Ce compte est d\\u00E9sactiv\\u00E9</string>
    <string name="too_many_requests_error">Trop de tentatives: merci de réessayer ultérieurement</string>
    <string name="internal_error">Une erreur interne est survenue: les \\u00E9quipes de développement ont \\u00E9t\\u00E9 notifi\\u00E9es</string>
    <string name="user_not_found_error">Utilisateur inconnu. Merci de vous inscrire</string>
    <string name="reset_password_error">Impossible de réinitialiser votre mot de passe</string>
    <string name="malformed_sign_in_error">Identifiants incorrects. Veuillez vérifier vos informations.</string>
    <string name="connection_issue">Problème de connexion. Veuillez vérifier votre réseau</string>

    // OTHER
    <string name="continue_as_guest_button_title">Continuer en tant qu'invité</string>
    <string name="continue_as_guest_dialog_title">Essayer en tant qu'invité</string>
    <string name="continue_as_guest_dialog_text">Commencez sans compte: certaines fonctions sont restreintes (synchro, récupération).Vous pourrez créer un compte plus tard pour garder vos données.</string>
    <string name="continue_as_guest_dont_ask_again">Ne plus demander</string>
    <string name="continue_as_guest_create_redirect_button">Créer un compte</string>
    <string name="continue_as_guest_validation_button">Continuer</string>
</resources>
